--- a/projects/latte-preview/src/app/app.component.html
+++ b/projects/latte-preview/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Latte UI Preview</h1>
 <p>View Latte UI components live!</p>
-<h2>Application Component</h2>
-<latte-application></latte-application>
+<h2>Layout Component</h2>
+<div class="preview" style="aspect-ratio: 16 / 9;">
+  <latte-layout></latte-layout>
+</div>
